--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 workflow:
   rules:
-    - if: $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "dev"
+    - if: $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "dev" || $CI_COMMIT_BRANCH == "pipeline"
 
 variables:
   DUX_VERSION: "0.1.0"
@@ -44,9 +44,9 @@ build-dux-for-fedora:
 
 upload-to-package-registry:
   stage: deploy
-  image: romzorus/deb-rust-build:v1.0
+  image: curlimages/curl:8.8.0
   script:
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file building/deb/dux-$DUX_VERSION.deb "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/dux/$DUX_VERSION/dux-$DUX_VERSION.deb"'
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file dux-$DUX_VERSION.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/dux/$DUX_VERSION/dux-$DUX_VERSION.rpm"'
   rules:
-   - if: $CI_COMMIT_BRANCH == "main"
+   - if: $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "pipeline"
