--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "standard"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-duxcore = "0.1.6"
+duxcore = { git = "https://gitlab.com/dux-tool/duxcore.git", branch = "dev"}
+# duxcore = "0.1.8"
 rayon = "1.10.0"
 config = "0.14.0"
 clap = { version = "4.5.16", features = ["derive"] }
